components/base/edge/gateway.yaml
# kubectl apply -f https://raw.githubusercontent.com/global-cloudwork/kubernetes/main/components/base/edge/gateway/ip-pool.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - name: gateway-certificate #Automaticaly Created
    # - name: udp-link
    #   port: 3478
    #   protocol: UDP
    #   allowedRoutes:
    #     namespaces:
    #       from: All
